k8s/base/ingress/ingress_prod.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: mlops-ingress

spec:
  ingressClassName: traefik

  tls:
    - secretName: nginx-tls

  rules:
    - http:
        paths:

          - path: /api
            pathType: Prefix
            backend:
              service:
                name: prediction-api
                port:
                  number: 8000

          - path: /mlflow
            pathType: Prefix
            backend:
              service:
                name: mlflow
                port:
                  number: 5000

          - path: /airflow
            pathType: Prefix
            backend:
              service:
                name: airflow-webserver
                port:
                  number: 8080

          - path: /flower
            pathType: Prefix
            backend:
              service:
                name: airflow-flower
                port:
                  number: 5555

          - path: /prometheus
            pathType: Prefix
            backend:
              service:
                name: prometheus
                port:
                  number: 9090

          - path: /grafana
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  number: 3000

          - path: /
            pathType: Prefix
            backend:
              service:
                name: evidently-ui
                port:
                  number: 8000
